--- a/libs/typescript/package.json
+++ b/libs/typescript/package.json
@@ -28,7 +28,11 @@
   },
   "homepage": "https://github.com/TxtDot/dalet#readme",
   "devDependencies": {
-    "tsc": "^2.0.4"
+    "@eslint/js": "^9.7.0",
+    "eslint": "9.x",
+    "globals": "^15.8.0",
+    "tsc": "^2.0.4",
+    "typescript-eslint": "^7.17.0"
   },
   "dependencies": {
     "@msgpack/msgpack": "3.0.0-beta2"
