--- a/libs/typescript/tsconfig.json
+++ b/libs/typescript/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
     "target": "es2019",
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "strict": true
   },
   "include": ["src/**/*"]
 }
