--- a/libs/typescript/package.json
+++ b/libs/typescript/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "bstart": "tsc && node ./dist/index.js"
+    "bstart": "tsc && node ./dist/index.js",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "repository": {
     "type": "git",
