--- a/libs/typescript/package.json
+++ b/libs/typescript/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "prepublishOnly": "npm run build",
     "start": "node ./dist/index.js",
     "bstart": "tsc && node ./dist/index.js",
     "lint": "eslint ./src",
