--- a/libs/rust/Cargo.toml
+++ b/libs/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dalet"
-version = "1.0.0-pre3"
+version = "1.0.0-pre4"
 edition = "2021"
 authors = ["artegoser"]
 license = "MIT"
@@ -12,7 +12,10 @@ keywords = ["dalet"]
 categories = ["compression", "compilers", "encoding"]
 
 [dependencies]
+bitvec = "1.0.1"
+num_enum = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_repr = "0.1"
 
 [features]
 default = ["types"]
