--- a/libs/rust/Cargo.toml
+++ b/libs/rust/Cargo.toml
@@ -18,5 +18,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
 
 [features]
-default = ["types"]
+default = ["types", "daletpack"]
 types = []
+daletpack = ["types"]
