--- a/libs/rust/Cargo.toml
+++ b/libs/rust/Cargo.toml
@@ -12,10 +12,16 @@ keywords = ["dalet"]
 categories = ["compression", "compilers", "encoding"]
 
 [dependencies]
-bitvec = "1.0.1"
 num_enum = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
+zstd = "0.13.2"
+
+[dev-dependencies]
+rmp-serde = { version = "1.3.0" }
+bincode = { version = "1.3.3" }
+flate2 = "1.0"
+
 
 [features]
 default = ["types", "daletpack"]
